[gd_scene load_steps=7 format=3 uid="uid://13xeh6njsm4b"]

[ext_resource type="TileSet" uid="uid://cb74ypis1pp00" path="res://internal/tiles/terrain.tres" id="1_fg1bu"]
[ext_resource type="Script" path="res://internal/scenes/gameplay/gameplay.gd" id="2_2ui68"]
[ext_resource type="Script" path="res://internal/scenes/gameplay/camera.gd" id="3_cnxoq"]
[ext_resource type="Script" path="res://internal/scenes/gameplay/pause_menu.gd" id="4_shqxh"]
[ext_resource type="Theme" uid="uid://d1kbq1nrnibof" path="res://internal/scenes/theme.tres" id="5_m7g4h"]
[ext_resource type="Script" path="res://internal/scenes/gameplay/win_message.gd" id="5_w8rni"]

[node name="TileMap" type="TileMap"]
texture_filter = 1
tile_set = ExtResource("1_fg1bu")
format = 2
layer_1/name = "Layer1"
script = ExtResource("2_2ui68")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
script = ExtResource("3_cnxoq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("5_m7g4h")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Level
"

[node name="LevelSelection" type="SpinBox" parent="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
rounded = true

[node name="PauseMenu" type="PanelContainer" parent="CanvasLayer"]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -63.0
offset_right = 65.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_m7g4h")
script = ExtResource("4_shqxh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
theme = ExtResource("5_m7g4h")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BackToTitle" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Title"

[node name="ExitToDesktop" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit to Desktop"

[node name="WinMessage" type="PanelContainer" parent="CanvasLayer"]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_m7g4h")
script = ExtResource("5_w8rni")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/WinMessage"]
layout_mode = 2
theme = ExtResource("5_m7g4h")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinMessage/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/WinMessage/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Continue" type="Button" parent="CanvasLayer/WinMessage/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[connection signal="game_paused" from="." to="CanvasLayer/PauseMenu" method="_on_game_paused"]
[connection signal="puzzle_completed" from="." to="CanvasLayer/WinMessage" method="_on_tile_map_puzzle_completed"]
[connection signal="value_changed" from="CanvasLayer/PanelContainer/MarginContainer/HBoxContainer/LevelSelection" to="." method="_on_level_selection_value_changed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer/Resume" to="CanvasLayer/PauseMenu" method="_on_resume"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer/BackToTitle" to="CanvasLayer/PauseMenu" method="_on_back_to_title_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer/VBoxContainer/ExitToDesktop" to="CanvasLayer/PauseMenu" method="_on_exit_to_desktop_pressed"]
[connection signal="next_level" from="CanvasLayer/WinMessage" to="." method="_on_win_message_next_level"]
[connection signal="pressed" from="CanvasLayer/WinMessage/MarginContainer/VBoxContainer/Continue" to="CanvasLayer/WinMessage" method="_on_continue_pressed"]
